WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285879
Followup to
288814@main
— use `ScrollableArea::scrollOffset()` instead of manually computing scroll offset from position
https://bugs.webkit.org/show_bug.cgi?id=285879
Summary
Followup to 288814@main — use `ScrollableArea::scrollOffset()` instead of man...
Wenson Hsieh
Reported
2025-01-13 14:30:29 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-01-13 14:31:20 PST
rdar://142818910
Wenson Hsieh
Comment 2
2025-01-13 15:03:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38962
EWS
Comment 3
2025-01-13 18:04:12 PST
Committed
288828@main
(0eb2638e33f0): <
https://commits.webkit.org/288828@main
> Reviewed commits have been landed. Closing PR #38962 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug